added vulnerability detection settings (curse you wazuh 4.9)

--- a/configs/internal_options.conf
+++ b/configs/internal_options.conf
@@ -306,7 +306,7 @@ syscheck.default_max_depth=256
 syscheck.symlink_scan_interval=600
 
 # Maximum file size for calcuting integrity hashes in MBytes [0..4095]
-# A value of 0 MB means to disable this filter
+# A value of 0 MB means to disable this filter
 syscheck.file_max_size=1024
 
 # Rootcheck checking/usage speed. The default is to sleep 50 milliseconds
@@ -409,7 +409,7 @@ wazuh_command.remote_commands=1
 wazuh.thread_stack_size=8192
 
 # Security Configuration Assessment DB request interval in minutes [0..60]
-# This option sets the maximum waiting time to resend a scan when the DB integrity check fails
+# This option sets the maximum waiting time to resend a scan when the DB integrity check fails
 sca.request_db_interval=5
 
 # Enable it to accept execute commands from SCA policies pushed from the manager in the shared configuration
@@ -423,6 +423,15 @@ sca.commands_timeout=30
 auth.timeout_seconds=1
 auth.timeout_microseconds=0
 
+# Vulnerability detector LRUs size
+vulnerability-detection.translation_lru_size=2048
+vulnerability-detection.osdata_lru_size=1000
+vulnerability-detection.remediation_lru_size=2048
+
+# Vulnerability detector - Enable or disable the scan manager
+# 0. Enabled
+# 1. Disabled
+vulnerability-detection.disable_scan_manager=1
 
 # Debug options.
 # Debug 0 -> no debug
